# cpp-images-omp

./: CMakeLists.txt  main.cpp
